namespace FaithTechTorontoAiBuildEvent.Provisioning;

public sealed record OperatorTargetProfile(string Server, string Database, string Environment, string? ConnectionEnvironmentVariable = null);
